Grace/tests/gibbs/errors/t261.grace
// ERROR = P1004
if then {
    print "Whiteboard marker."
}
